kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace
  namespace: marketplace
spec:
  type: ClusterIP
  selector:
    app: marketplace
  ports:
    - port: 3000
      targetPort: 3000
