kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace
  namespace: marketplace
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  ingressClassName: traefik
  rules:
    - host: marketplace.nejara.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketplace
                port:
                  number: 3000
  tls:
    - hosts:
        - marketplace.nejara.fr
